vlib/v/checker/tests/comparing_typesymbol_to_a_type_should_not_compile.vv
import v.table

fn main() {
	t := table.new_table()
	ityp := table.int_type
	isym := t.get_type_symbol(ityp)
	println(ityp.debug())
	println(isym)
	println(isym.debug())
	x := ityp == table.string_type
	// the next line should produce at least a warning, or even an error, without an explicit cast:
	z := isym == table.string_type
	println(typeof(isym).name)
	println(typeof(table.string_type).name)
	println(x)
	println(z)
}
